--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,51 @@
 body,
 html {
-  background-color: #2f1847;
+  background-color: #087e8b;
+}
+
+.form {
+  font-family: 'Lato';
+  font-weight: bold;
+  font-size: 1rem;
+  color: #edddd4;
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+}
+
+label {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  font-size: 1.2rem;
+}
+
+input {
+  margin-right: 0.5rem;
+  background-color: #edddd4;
+  border: thin solid white;
+}
+
+button {
+  font-family: 'Lato';
+  background-color: white;
+  color: black;
+  border: none;
+  background-color: #edddd4;
+  border: thin solid white;
+  font-size: 1rem;
+}
+
+#login-button {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 1rem;
+}
+
+#google {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  font-family: 'Lato';
+  color: white !important;
 }
