--- a/public/style.css
+++ b/public/style.css
@@ -30,7 +30,7 @@ button {
   background-color: white;
   color: black;
   border: none;
-  background-color: #edddd4;
+  background-color: #f0eae7;
   border: thin solid white;
   font-size: 1rem;
 }
