--- a/public/style.css
+++ b/public/style.css
@@ -7,22 +7,22 @@ html {
   font-family: 'Lato';
   font-weight: bold;
   font-size: 1rem;
-  color: #edddd4;
   display: flex;
   justify-content: center;
   margin-top: 2rem;
+  color: white;
 }
 
 label {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 input {
   margin-right: 0.5rem;
-  background-color: #edddd4;
-  border: thin solid white;
+  font-size: 1rem;
+  border: thin solid black;
 }
 
 button {
@@ -30,7 +30,7 @@ button {
   background-color: white;
   color: black;
   border: none;
-  background-color: #f0eae7;
+  background-color: #edddd4;
   border: thin solid white;
   font-size: 1rem;
 }
@@ -42,10 +42,21 @@ button {
   margin-top: 1rem;
 }
 
+#login-button button {
+  background-color: white;
+  border: thin solid black;
+}
+
 #google {
   display: flex;
   justify-content: center;
   margin-top: 1rem;
   font-family: 'Lato';
   color: white !important;
+}
+
+#bag-details {
+  font-weight: bold;
+  font-family: 'Trispace', sans-serif;
+  border-bottom: thin solid black;
 }
