--- a/client/components/header/header.css
+++ b/client/components/header/header.css
@@ -1,3 +1,20 @@
 #header {
-  background-color: #87baab;
+  background-color: #c7cea1;
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
+  margin-top: -1rem;
+  margin-right: -1rem;
+  margin-left: -1rem;
+  font-family: 'Lato';
+}
+
+#header-message {
+  display: flex;
+  justify-content: center;
+}
+
+#header-message-code {
+  font-weight: bold;
+  padding-left: 0.2rem;
+  padding-right: 0.2rem;
 }
