--- a/client/components/home/home.css
+++ b/client/components/home/home.css
@@ -5,6 +5,9 @@
   margin-right: -1rem;
 }
 
+#main {
+  margin-bottom: 1rem;
+}
 .main {
   font-family: 'Trispace';
   text-align: center;
@@ -53,10 +56,23 @@
 }
 
 /* star */
+#star-container {
+  display: flex;
+  justify-content: center;
+  width: 96%;
+}
+
 #star {
   text-align: center;
+  /* width: 0px;
+  height: 0px; */
+  border-radius: 100%;
+  box-shadow: 0 0 200px 20px #fc0, 0 0 200px 20px rgb(240, 227, 174);
+  background-color: rgb(240, 227, 174);
+  width: 0px;
+  margin-right: 5px;
 }
-.star {
+.star__part {
   position: relative;
   display: inline-block;
   width: 0;
@@ -73,8 +89,8 @@
   /* Controlls the size of the stars. */
   font-size: 24px;
 }
-.star:before,
-.star:after {
+.star__part:before,
+.star__part:after {
   content: '';
 
   display: block;
@@ -92,6 +108,6 @@
   transform: rotate(-35deg);
 }
 
-.star:after {
+.star__part:after {
   transform: rotate(35deg);
 }
