--- a/client/components/order/confirmation.css
+++ b/client/components/order/confirmation.css
@@ -1,11 +1,15 @@
 #order-confirmation {
-  background-color: white;
+  /* background-color: white; */
   width: 100%;
 }
 
 #confirmation-header {
   font-family: 'Trispace';
   font-size: 1rem;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  border: thin solid black;
 }
 
 #details {
@@ -19,6 +23,17 @@
   text-align: center;
 }
 
-.confirmation-img {
+#details img {
   height: 10rem;
+}
+
+.line-item-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 1rem;
+  margin-top: 2rem;
+  border: thin solid black;
+  width: 10rem;
+  background-color: white;
 }
