--- a/client/components/order/confirmation.css
+++ b/client/components/order/confirmation.css
@@ -17,6 +17,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 .order-confirmation div {
   margin: 1rem;
@@ -36,4 +37,6 @@
   border: thin solid black;
   width: 10rem;
   background-color: white;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
