--- a/client/components/navbar/navbar.css
+++ b/client/components/navbar/navbar.css
@@ -20,7 +20,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-bottom: solid white;
+  /* border-bottom: solid white; */
 }
 
 nav a {
