--- a/client/components/productsView/productsView.css
+++ b/client/components/productsView/productsView.css
@@ -54,6 +54,8 @@ img.product:hover {
   /* background-color: #edddd4; */
   font-size: 1.5rem;
   text-align: center;
+  border-top: solid white;
+  padding-top: 1rem;
 }
 
 .sort {
